# mnemo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GATE_REPORT.md  LICENSE  README.md  README.zh.md  install.ps1  install.sh  mnemo.spec  mnemo_rumination_lora_memory_architecture.md  pyproject.toml
.cursor/rules/: mnemo.mdc
.github/workflows/: build.yml  website.yml
data/guide_knowledge/: client_setup.json  command_templates.json  concepts.json  faq.json  install_guides.json  security.json  troubleshooting.json
desktop/: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/interface/: mod.rs  protocol.rs  router.rs  server.rs
docs/: BEST_PRACTICE_PROMPT.md  CLAUDE_mnemo_usage.md  builtin-llm-guide-design.md  cli_roadmap_analysis.md  mcp_install_research.md  search_accuracy_analysis.md  smoke_test.md  windsurf_copilot_integration.md
docs/demo/: viz_v1_live.html  viz_v2.html
docs/design/: fts_progressive_trim.md  search_offset_pagination.md
docs/website/: README.md  index.html  test.html
mcp/: README.md  config.examples.json  smoke_test.md
scripts/: build.sh  freeze_phase2_baseline.py  install.ps1  install.sh  m3_gate_eval.py  phase3_regression_gate.py  pyinstaller_entry.py  test_open_agent.sh
src/mnemo/: __init__.py  config.py  db.py  relation_types.py
tests/: conftest.py  scenario_conftest.py  test_accuracy.py  test_archive_service.py  test_authority.py  test_authority_repository.py  test_auto_link_vector.py  test_chinese_search.py  test_cli.py  test_context_aware_rank.py  test_degraded_rerank.py  test_edge_feedback.py  test_embedding.py  test_extended_models.py  test_feature_flags.py  test_feedback_loop.py  test_fine_edge.py  test_freshness.py  test_fts_orphan.py  test_health_dispatcher.py  test_intelligence.py  test_lifecycle_service.py  test_m3a_backfill.py  test_mcp.py  test_monitor_collector.py  test_monitor_runner.py  test_monitor_storage.py  test_phase3_contradictions.py  test_relation_types.py  test_relevance.py  test_repository.py  test_rerank.py  test_rest_api.py  test_rrf.py  test_rrf_integration.py  test_search_auto_fallback.py  test_search_offset.py  test_services.py  test_setup_e2e.sh  test_setup_prompt.py  (+4 more)
tests/fixtures/: DATA_SCHEMA.md  README.md  TEST_CASE_DESIGN.md  baseline_phase2.json  load_fixtures.py
tests/guide/: test_fixed_replies.py  test_install_templates.py  test_intent_router.py  test_model_provider.py  test_output_validator.py  test_retriever.py
tests/monitor/: conftest.py  test_rules_behavior_compliance.py  test_rules_knowledge_health.py  test_rules_search_quality.py
viz/: viz_demo.html
viz/viz_v2/: STYLE_GUIDE.md  (+2 more)
website/: index.html
(+177 files in other folders)
