[package]
name = "mnemo-desktop"
version = "0.1.0"
description = "mnemo desktop client"
authors = ["zhuqingyu"]
edition = "2021"

[lib]
name = "mnemo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
libc = "0.2"
